Fix anti-sidebar spacing
Forgot to fix anti-sidebar spacing parity with normal sidebar, messing
with center alignment. oops.

--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,7 @@ embed {
     width: 21px;
     overflow: hidden;
     height: 130px;
+    padding: 0;
 }
 
 .sidebar.collapsed #sidebar-toggle {
